--- a/strings/command.yml
+++ b/strings/command.yml
@@ -1,4 +1,4 @@
-PING_COMMAND : ["ping", "alive"]
+PING_COMMAND : ["بنج", "alive"]
 START_COMMAND : ["start", "mstart"]
 HELP_COMMAND : ["help"]
 SETTINGS_COMMAND : ["settings", "setting"]
@@ -6,29 +6,29 @@ RELOAD_COMMAND : ["admincache", "reload"]
 GSTATS_COMMAND : ["gstats", "globalstats"]
 STATS_COMMAND : ["stats"]
 LANGUAGE_COMMAND : ["langchangexd"]
-PLAY_COMMAND : ["تشغيل", "vplay", "cplay", "cvplay", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
-PLAYMODE_COMMAND : ["playmode", "mode"]
-CHANNELPLAY_COMMAND : ["channelplay"]
-STREAM_COMMAND : ["stream", "cstream", "streamforce"]
+PLAY_COMMAND : ["تشغيل", "فيديو", "ش", "ف", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
+PLAYMODE_COMMAND : ["قائمه", "قائمه"]
+CHANNELPLAY_COMMAND : ["قناة"]
+STREAM_COMMAND : ["كمل", "كمل", "كمل"]
 PLAYLIST_COMMAND : ["playlist"]
 DELETEPLAYLIST_COMMAND : ["deleteplaylist", "delplaylist"]
 QUEUE_COMMAND : ["queue", "cqueue", "player", "cplayer", "playing", "cplaying"]
-SONG_COMMAND : ["song", "video", "vsong"]
+SONG_COMMAND : ["تحميل", "تحميل", "تحميل"]
 LYRICS_COMMAND : ["lyrics", "lyric"]
 AUTH_COMMAND : ["auth"]
 UNAUTH_COMMAND : ["unauth"]
 AUTHUSERS_COMMAND : ["authusers", "authlist"]
-PAUSE_COMMAND : ["pause", "cpause"]
-RESUME_COMMAND : ["resume", "cresume"]
-STOP_COMMAND : ["stop", "end", "cstop", "cend"]
-SKIP_COMMAND : ["skip", "cskip"]
+PAUSE_COMMAND : ["وقف", "وقف"]
+RESUME_COMMAND : ["كمل", "كمل"]
+STOP_COMMAND : ["ايقاف", "انهاء", "ايقاف", "انهاء"]
+SKIP_COMMAND : ["تخطي", "تخطي"]
 SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
 LOOP_COMMAND : ["loop", "cloop"]
 SEEK_COMMAND : ["seek", "cseek", "seekback", "cseekback"]
 RESTART_COMMAND : ["reboot"]
 ADDSUDO_COMMAND : ["addsudo", "addrandi", "randi"]
 DELSUDO_COMMAND : ["delsudo", "rmsudo", "bsdk", "bhakkbsdk"]
-SUDOUSERS_COMMAND : ["sudolist", "listsudo", "sudoers", "sudo"]
+SUDOUSERS_COMMAND : ["sudolist", "listsudo", "sudoers", "المطور"]
 BROADCAST_COMMAND : ["broadcast", "gcast"]
 BLACKLISTCHAT_COMMAND : ["blacklistchat", "blchat"]
 WHITELISTCHAT_COMMAND : ["whitelistchat", "unblchat", "wlchat"]
