--- a/strings/command.yml
+++ b/strings/command.yml
@@ -6,10 +6,10 @@ RELOAD_COMMAND : ["admincache", "reload"]
 GSTATS_COMMAND : ["gstats", "globalstats"]
 STATS_COMMAND : ["stats"]
 LANGUAGE_COMMAND : ["langchangexd"]
-PLAY_COMMAND : ["تشغيل", "فيديو", "ش", "ف", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
+PLAY_COMMAND : [تشغيل", "فيديو", "cتشغيل","cفيديو", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
 PLAYMODE_COMMAND : ["قائمه", "قائمه"]
 CHANNELPLAY_COMMAND : ["قناة"]
-STREAM_COMMAND : ["كمل", "كمل", "كمل"]
+STREAM_COMMAND : ["cكمل", "كمل", "كمل"]
 PLAYLIST_COMMAND : ["playlist"]
 DELETEPLAYLIST_COMMAND : ["deleteplaylist", "delplaylist"]
 QUEUE_COMMAND : ["queue", "cqueue", "player", "cplayer", "playing", "cplaying"]
@@ -18,10 +18,10 @@ LYRICS_COMMAND : ["lyrics", "lyric"]
 AUTH_COMMAND : ["auth"]
 UNAUTH_COMMAND : ["unauth"]
 AUTHUSERS_COMMAND : ["authusers", "authlist"]
-PAUSE_COMMAND : ["وقف", "وقف"]
-RESUME_COMMAND : ["كمل", "كمل"]
-STOP_COMMAND : ["ايقاف", "انهاء", "ايقاف", "انهاء"]
-SKIP_COMMAND : ["تخطي", "تخطي"]
+PAUSE_COMMAND : ["cوقف", "وقف"]
+RESUME_COMMAND : ["cكمل", "كمل"]
+STOP_COMMAND : ["ايقاف", "cايقاف", "ايقاف", "انهاء"]
+SKIP_COMMAND : ["cتخطي", "تخطي"]
 SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
 LOOP_COMMAND : ["loop", "cloop"]
 SEEK_COMMAND : ["seek", "cseek", "seekback", "cseekback"]
