--- a/strings/command.yml
+++ b/strings/command.yml
@@ -6,10 +6,10 @@ RELOAD_COMMAND : ["admincache", "reload"]
 GSTATS_COMMAND : ["gstats", "globalstats"]
 STATS_COMMAND : ["stats"]
 LANGUAGE_COMMAND : ["langchangexd"]
-PLAY_COMMAND : [تشغيل", "فيديو","cs","cf", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
+PLAY_COMMAND : [تشغيل", "فيديو","ش","ف", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
 PLAYMODE_COMMAND : ["قائمه", "قائمه"]
 CHANNELPLAY_COMMAND : ["قناة"]
-STREAM_COMMAND : ["كمل", "كمل", "ck"]
+STREAM_COMMAND : ["كمل", "كمل", "ك"]
 PLAYLIST_COMMAND : ["playlist"]
 DELETEPLAYLIST_COMMAND : ["deleteplaylist", "delplaylist"]
 QUEUE_COMMAND : ["queue", "cqueue", "player", "cplayer", "playing", "cplaying"]
@@ -18,10 +18,10 @@ LYRICS_COMMAND : ["lyrics", "lyric"]
 AUTH_COMMAND : ["auth"]
 UNAUTH_COMMAND : ["unauth"]
 AUTHUSERS_COMMAND : ["authusers", "authlist"]
-PAUSE_COMMAND : ["وقف", "cw"]
-RESUME_COMMAND : [كمل", "ck"]
-STOP_COMMAND : ["ce", "ايقاف", "ايقاف", "ء"]
-SKIP_COMMAND : ["تخطي", "ct"]
+PAUSE_COMMAND : ["وقف", "و"]
+RESUME_COMMAND : [كمل", "ك"]
+STOP_COMMAND : ["ي", "ايقاف", "ايقاف"٫"ء"]
+SKIP_COMMAND : ["تخطي", "ت"]
 SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
 LOOP_COMMAND : ["loop", "cloop"]
 SEEK_COMMAND : ["seek", "cseek", "seekback", "cseekback"]
